--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,9 +14,10 @@ oferta:
     resource: "@OfertaBundle/Resources/config/routing.yml"
     prefix:   /
 
-pagina_ayuda:
-    path:     /ayuda
-    defaults: {_controller: OfertaBundle:Default:ayuda}
+pagina_estatica:
+    path:     /sitio/{pagina}
+    defaults: {_controller: OfertaBundle:Sitio:estatica}
+
 
 
 
